Jul 19, 2007 - chris
o bugfix: if a ham_db_t handle was reused after ham_close, an internal
    pointer was not set to NULL, which resulted in a segfault

Jun 15, 2007 - chris ---------------------------------------------------
                      release of hamsterdb-0.4.4

Jul 13, 2007 - chris
o finalized "environment" functions, APIs and unittests; added a new sample
    (samples/env1.c).

Jul 06, 2007 - chris
o bugfix: freelist pages were not marked as dirty, and therefore 
    sometimes weren't written to disk

Jul 03, 2007 - chris
o bugfix: deleted pages (with db_free_page()) were not moved to the
    freelist, and zombie pages were created

Jun 24, 2007 - chris
o finished the port to Windows CE. Solution files are in the wince 
    directory (configured for STANDARDSDK 5.0 (x86)). See wince/README.TXT
    for the details.

Jun 20, 2007 - chris
o improved the caching of extended keys; the cache is now purged when it's
    too full

Jun 17, 2007 - chris
o added the flag HAM_OPEN_EXCLUSIVE; will lock the file exclusively, as 
    long as it's open. Returns HAM_WOULD_BLOCK if you try to place an
    exclusive lock on a database which was already opened exclusively.

Jun 15, 2007 - chris
o fixed a bug which disabled HAM_DISABLE_MMAP; even if the flag was 
    specified, mmap routines were used

Jun 12, 2007 - chris ---------------------------------------------------
                      release of hamsterdb-0.4.3

Jun 10, 2007 - chris
o fixed a small memory leak (in-memory db only, when using extended keys
    and a lot of SMOs occur, because many keys are deleted)

Jun 04, 2007 - chris
o fixed configure.in - do not build unittests if cppunit is not
    installed

May 30, 2007 - chris
o added unittests for util.c
o modified doxygen tags in the documentation (ham/hamsterdb.h)
o fixed a rare memory leak with SMOs during ham_erase 
    (only for in-memory databases)

May 29, 2007 - chris
o added unittests for btree_cursor.c

May 19, 2007 - chris